[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/scripts/NPC/NPC.gd" type="Script" id=1]
[ext_resource path="res://res/shaders/select_npc.material" type="Material" id=2]
[ext_resource path="res://res/shaders/targeted_npc.material" type="Material" id=3]
[ext_resource path="res://res/sprites/characters/guard_portrait.png" type="Texture" id=4]
[ext_resource path="res://scenes/Scenes/DialogPanel.tscn" type="PackedScene" id=5]

[node name="NPC" type="KinematicBody2D"]
scale = Vector2( 1.00418, 1.0142 )
script = ExtResource( 1 )
material_on_mouse_enter = ExtResource( 2 )
material_on_target = ExtResource( 3 )
chara_name = "NPC"
chara_portrait = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="DialogPanel" parent="CanvasLayer" instance=ExtResource( 5 )]
[connection signal="on_dialog_end" from="CanvasLayer/DialogPanel" to="." method="_on_DialogPanel_on_dialog_end"]
