[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/scripts/NPC/NPC.gd" type="Script" id=1]
[ext_resource path="res://res/shaders/select_npc.material" type="Material" id=2]
[ext_resource path="res://res/shaders/targeted_npc.material" type="Material" id=3]
[ext_resource path="res://res/sprites/env/law.png" type="Texture" id=4]
[ext_resource path="res://DialogMessage.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Scenes/Interactable.tscn" type="PackedScene" id=6]
[ext_resource path="res://res/font.tres" type="DynamicFont" id=7]
[ext_resource path="res://scenes/Scenes/DialogPanel.tscn" type="PackedScene" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.33256
height = 33.9592

[sub_resource type="CircleShape2D" id=2]
radius = 11.9791

[node name="LawNPC" type="KinematicBody2D"]
script = ExtResource( 1 )
material_on_mouse_enter = ExtResource( 2 )
material_on_target = ExtResource( 3 )
chara_name = "Law"
chara_portrait = ExtResource( 4 )

[node name="DialogMessage" parent="." instance=ExtResource( 5 )]
editor/display_folded = true
message = "It is I, the LAW !"

[node name="DialogMessage" parent="DialogMessage" instance=ExtResource( 5 )]
message = "You MUST respect me !"

[node name="Collision" type="CollisionPolygon2D" parent="."]
position = Vector2( -0.0522929, 0.156878 )
scale = Vector2( 1.00418, 1.0142 )
polygon = PoolVector2Array( -8.22234, 12.9512, -5.33417, 16.6151, -0.189621, 21.1726, 9.10668, 11.5214, 7.21132, 5.17655, -0.00911237, 8.39364, -8.22234, 4.19355 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.00418, 1.0142 )
texture = ExtResource( 4 )

[node name="Interactable" parent="." instance=ExtResource( 6 )]
editor/display_folded = true
scale = Vector2( 1.00418, 1.0142 )

[node name="MouseArea" type="Area2D" parent="Interactable"]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactable/MouseArea"]
shape = SubResource( 1 )

[node name="ActionArea" type="Area2D" parent="Interactable"]
editor/display_folded = true
position = Vector2( 0.995837, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactable/ActionArea"]
position = Vector2( -2.02492, 13.2275 )
shape = SubResource( 2 )

[node name="Name" type="Label" parent="Interactable"]
visible = false
margin_left = -13.5288
margin_top = -27.8846
margin_right = 168.471
margin_bottom = 8.11537
rect_scale = Vector2( 0.15, 0.15 )
custom_fonts/font = ExtResource( 7 )
text = "TEST"
align = 1
valign = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="DialogPanel" parent="CanvasLayer" instance=ExtResource( 8 )]
